# msg-parser-wasm

./: Cargo.toml  README.md  README.zh-CN.md
pkg/bundler/: README.md  msg_parser_wasm.d.ts  msg_parser_wasm.js  msg_parser_wasm_bg.js  msg_parser_wasm_bg.wasm  package.json
pkg/web/: msg_parser_wasm.d.ts  msg_parser_wasm.js  msg_parser_wasm_bg.wasm  msg_parser_wasm_bg.wasm.d.ts  package.json
src/: lib.rs
test/: index.html
