[package]
name = "msg-parser-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfb = "0.7"
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
serde_bytes = "0.11"

# 优化 WASM 体积（可选）
[profile.release]
lto = true
opt-level = 'z'